<resources>
    <string name="app_name">心管家</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>

    <!--通用-->
    <string name="next">下一步</string>

    <!-- LoginActivity -->
    <string name="send_sms_code">发送验证码</string>
    <string name="sending_sms_code">发送中...</string>
    <string name="account_name">请输入您的手机号</string>
    <string name="account_sms">请输入验证码</string>
    <string name="account_verify">请输入验证码</string>
    <string name="account_pwd">输入您的密码，至少6个字符</string>
    <string name="account_confirm_pwd">请确认您的密码</string>
    <string name="register">注册使用</string>
    <string name="forget_pwd">忘记密码</string>

    <!-- RegisterActivity -->
    <string name="title_activity_register">注册成为新用户</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="setting_birthday">点击设定您的生日</string>
    <string name="setting_phone">填写您的手机号码</string>

    <!-- Drawer Menu-->
    <string name="func_main_1">我的医生</string>
    <string name="func_my_doctor">我的医生</string>
    <string name="func_hospital_record">看病记录</string>
    <string name="func_healthy_record">健康记录</string>
    <string name="func_case_illness">病历管理</string>
    <string name="func_around_me">周围医院</string>
    <string name="func_logout">退出登录</string>
    <string name="func_alert">后台提醒</string>
    <string name="func_setting">设置</string>

    <!-- 预约Fragment-->
    <string name="operation_record">手术记录</string>
    <string name="doctor_match">或许能帮助您的医生</string>
    <string name="title_activity_make_appointment">预约医生</string>
    <string name="update_my_status">健康记录</string>
    <string name="phone_chat">电话诊治</string>
    <string name="upload_image">名医看图</string>
    <string name="small_tips">健康指南</string>
    <string name="online_chat">在线询诊</string>

    <!-- 预约医生Activity-->
    <string name="title_make_appointment">预约我的医生</string>
    <string name="submit_appointment">立即预约!</string>

    <!-- 其他界面-->
    <string name="title_activity_small_tips">健康指南</string>
    <string name="title_activity_chat_online">在线诊治</string>
    <string name="title_activity_phone_call">电话诊治</string>
    <string name="title_activity_medicine_alert">服药提醒</string>
    <string name="title_activity_update_my_status">反馈健康记录</string>
    <string name="title_activity_doctor_see_image">名医看图</string>

    <!-- 健康贴士-->
    <string name="other_tips">常见问题</string>
    <string name="title_activity_doctor_online_chat">DoctorOnlineChat</string>
    <string name="title_activity_hospital_around_me">HospitalAroundMe</string>
    <string name="title_activity_new_friend">NewFriendActivity</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="title_activity_share">发送给我的医生</string>
    <string name="title_activity_fullfill_profile">FullfillProfile</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat
        velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed
        nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_lost_my_password">LostMyPassword</string>


    <!-- For  test -->
</resources>
