<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context="com.blazers.app.doctor.LoginActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/background_login">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textView" android:textSize="64sp" android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp" android:textColor="#fafafa" android:typeface="monospace"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/editText" android:layout_below="@+id/textView" android:layout_marginTop="96dp"
            android:inputType="phone" android:hint="@string/account_name" android:paddingLeft="64dp" android:gravity="bottom"
            android:paddingBottom="16dp" android:textColor="#666" android:textColorHint="#888"
            android:textSize="18sp" android:background="@drawable/edit_corner_upper"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2" android:layout_below="@+id/editText" android:hint="@string/account_pwd"
            android:paddingLeft="64dp" android:gravity="bottom" android:paddingBottom="16dp"
            android:textColor="#666" android:textColorHint="#888" android:textSize="18sp"
            android:background="@drawable/edit_corner_bottom"/>
    <Button
            android:background="@drawable/selector_btn_login"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="登        陆"
            android:id="@+id/button" android:layout_alignParentBottom="true" android:layout_marginBottom="32dp"
            android:textColor="#fafafa" android:textSize="20sp"
        android:onClick="doLogin" />
    <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/imageView" android:layout_alignLeft="@+id/editText"
            android:layout_alignTop="@+id/editText" android:layout_marginLeft="8dp"
            android:src="@drawable/ic_stay_primary_portrait_grey600_36dp" android:paddingLeft="12dp"
            android:paddingRight="12dp" android:paddingTop="12dp"/>
    <ImageView android:layout_width="48dp" android:layout_height="48dp" android:id="@+id/imageView2"
               android:layout_alignLeft="@+id/editText" android:layout_alignTop="@+id/editText2"
               android:layout_marginLeft="8dp" android:src="@drawable/ic_vpn_key_grey600_36dp"
               android:paddingLeft="12dp" android:paddingRight="12dp" android:paddingTop="12dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:onClick="doRegister"
            android:id="@+id/textView2" android:textColor="#fafafa"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="12dp" android:textSize="16sp" android:layout_alignLeft="@+id/editText2"
            android:layout_marginLeft="8dp" android:paddingTop="12dp" android:paddingBottom="12dp"
            android:clickable="true" android:background="@drawable/selector_text_normal"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forget_pwd"
              android:id="@+id/textView3" android:textColor="#fafafa" android:layout_below="@+id/editText2"
              android:layout_marginTop="12dp" android:textSize="16sp" android:layout_alignRight="@+id/editText2"
              android:layout_marginRight="8dp" android:paddingTop="12dp" android:paddingBottom="12dp"
              android:clickable="true" android:background="@drawable/selector_text_normal"/>
</RelativeLayout>
